--- a/OtterCoGen-L/manifest.json
+++ b/OtterCoGen-L/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Otter-CoGen",
+    "name": "Otter CoGen",
     "version": "1.0",
     "description": "Displays stats of tab domains.",
     "content_scripts":[
